# Sheafly

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
cmake/: FetchPdfium.cmake
docs/: ROADMAP.md
docs/adr/: 0001-stack-and-pdf-engine.md
src/: main.cpp
src/core/: PdfDocument.cpp  PdfDocument.h  PdfRenderer.cpp  PdfRenderer.h
src/ui/: MainWindow.cpp  MainWindow.h
tests/: test_pdfdocument.cpp  test_pdfrenderer.cpp
